<resources>
    <string name="app_name">ConcreteCalculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="blankSpace">   </string>

    <string name="headerTitle">CONCRETE BUDDY</string>
    <string name="headerEmail">concretebuddy@outlook.com</string>

    <!-- home text -->
    <string name="homeNav">Navigate using sidebar on top left!</string>
    <string name="homeImgDesc">Concrete Buddy, rotated slightly making the title tilted.</string>

    <!-- menu text -->
    <string name="menu_calc">Calculator</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_listings">Listings</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_credits">Credits</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- calculator text -->
    <string name="calcTitle">Calculator</string>

    <string name="calcSlabs">Slabs</string>
    <string name="calcWidth">Width</string>
    <string name="calcLength">Length</string>
    <string name="calcHeight">Height</string>

    <string name="calcWidthInMeters">(Width in meters)</string>
    <string name="calcLengthInMeters">(Length in meters)</string>
    <string name="calcHeightInCm">(Height in centimeters)</string>

    <string name="calcWidthInFeet">(Width in ft)</string>
    <string name="calcLengthInFeet">(Length in ft)</string>
    <string name="calcHeightInInches">(Height in inches)</string>

    <string name="calcCircular">Circular</string>
    <string name="calcOuter">Outer</string>
    <string name="calcInner">Inner</string>

    <string name="calcOuterInMeters">(Out. Diameter in meters)</string>
    <string name="calcInnerInMeters">(In. Diameter in meters)</string>

    <string name="calcOuterInFeet">(Out. Diameter in ft)</string>
    <string name="calcInnerInFeet">(In. Diameter in ft)</string>

    <string name="calcNumber">Number</string>
    <string name="calcNumberOf">(Number Of Slabs)</string>

    <string name="calcCalculate">Calculate</string>

    <string name="calcPressCalculate">Press Calculate to see how much concrete is needed</string>

    <!-- settings text -->
    <string name="settingsTitle">Concrete Calculator Settings</string>
    <string name="settingsSetBold">Bold Text</string>
    <string name="settingsMeasurementType">Set Units</string>
    <string name="settingsSendFeedback">Send App Feedback</string>

    <!-- contact text -->
    <string name="contactTitle">Contact me for feedback or any inquiries you may have!</string>
    <string name="contactEmail">EMAIL</string>
    <string name="contactSMS">SMS</string>
    <string name="contactPhone">PHONE</string>
    <string name="contactMap">LOCATION</string>

    <!-- listings text -->
    <string name="listingsButton">Search Listings</string>

    <!-- credits text -->
    <string name="creditPrompt">Select item from list to see its attribution.</string>
    <string name="creditShare">Share On Twitter!</string>
</resources>