<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_calc" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_listings"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/menu_listings" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact_mail_24"
            android:title="@string/menu_contact" />
    </group>
</menu>