<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8sp"
    android:orientation="vertical"
    tools:context=".CalculatorFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/calculatorTitleTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10sp"
        android:layout_weight="5"
        android:fontFamily="monospace"
        android:padding="8sp"
        android:text="@string/calcTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calcSlabsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/calcSlabs"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcWidthTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:paddingRight="4dp"
                android:text="@string/calcWidth"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal"
                android:singleLine="false" />

            <TextView
                android:id="@+id/calcWidthInTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcWidthInMeters" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcLengthTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:paddingRight="4dp"
                android:text="@string/calcLength"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calcLengthInTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcLengthInMeters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcHeightSlabsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/calcHeight"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputHeightSlabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calcHeightInSlabsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcHeightInCm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcNumberSlabsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/calcNumber"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputNumberSlabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calcNumberOfSlabsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcNumberOf" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calcCircularTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/calcCircular"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calOuterTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/calcOuter"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputOuter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal"
                android:singleLine="false" />

            <TextView
                android:id="@+id/calcOuterInTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcOuterInMeters" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcInnerTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/calcInner"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calcInnerInTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcInnerInMeters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcHeightCircTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/calcHeight"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputHeightCirc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calcHeightInCircTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcHeightInCm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcNumberCircTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="@string/calcNumber"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numInputNumberCirc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#D6D6D6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calcNumberOfCircTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="2"
                android:text="@string/calcNumberOf" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/calcButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_weight="5"
        android:text="@string/calcCalculate"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/showCalcTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:padding="8dp"
        android:text="@string/calcPressCalculate"
        android:textAlignment="center" />


</LinearLayout>